# deyana

./: .gitignore  package.json  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  process.rs  settings.rs  tray.rs  window.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/floating/: BackendStatusBadge.tsx  CompactVoiceButton.tsx  ConnectorStatusList.tsx  FloatingDockHandle.tsx  FloatingModelBadge.tsx  FloatingOrb.tsx  FloatingPanel.tsx  FloatingPrivacyBadge.tsx  FloatingStatusRing.tsx  FloatingSyncIndicator.tsx  MemoryPreview.tsx  QuickActions.tsx  VoicePanel.tsx
apps/desktop/src/services/: backendClient.ts  tauriClient.ts
apps/desktop/src/stores/: assistantStore.ts
apps/desktop/src/styles/: globals.css
services/core/: pyproject.toml
services/core/src/deyana_core/: app.py  connectors.py  local_models.py  memory.py  memory_pipeline.py  models.py  privacy.py  release.py  runtime.py  settings.py  storage.py  token_vault.py  tools.py  voice.py
services/core/src/deyana_core/api/: __init__.py  connectors.py  memory.py  onboarding.py  settings.py  tools.py  vault.py
services/core/tests/: test_connectors.py  test_memory.py  test_models.py  test_onboarding.py  test_privacy.py  test_settings.py  test_status.py  test_tools.py  test_voice.py
vault-template/: README.md
vault-template/Meetings/: README.md
(+2 files in other folders)
