[package]
name = "deyana-desktop"
version = "0.1.0"
description = "DE'YANA desktop shell"
authors = ["DE'YANA"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
