[package]
name = "deyana-desktop"
version = "0.1.0"
description = "Deyana desktop shell"
authors = ["DEYANA"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
